main.tf
/*
resource "google_compute_instance" "vm_instance" {
  name         = "waifu-botter-instance"
  machine_type = "f1-micro"

  boot_disk {
    initialize_params {
      image = "debian-cloud/debian-9"
    }
  }

  network_interface {
    network = google_compute_network.vpc_network.name
    access_config {
    }
  }

  metadata = {
    type  = "testing"
    price = "5$"
  }

  tags = ["web"]

  metadata_startup_script = "echo this is a test file for $(hostname) > / test.txt ; apt install nginx ; systemctl start nginx"
}

*/
